[8676] reformat code, optimize imports